Fixing too-long margins on mobile

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -66,8 +66,12 @@ a {
 }
 
 #dark-mode-button {
-  width: 6rem;
   margin: 1rem auto;
+  
+  button {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .dark-mode-selector {
@@ -478,7 +482,6 @@ svg {
 
 .hero-badge {
   margin-top: 1rem;
-  margin-bottom: -11.75rem;
   height: 40rem;
 }
 
@@ -503,7 +506,7 @@ svg {
 }
 
 .home-columns {
-  margin-top: 12rem;
+  margin-top: 1rem;
 
   h2 {
     font-family: $subtitle-fonts;
